[package]
name = "rustbin"
version = "0.1.0"
edition = "2024"
default-run = "rustbin"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
bytecount = "0.6"
bytes = "1"
dotenvy = "0.15"
fontdue = "0.9"
itoa = "1"
lru = "0.18"
maud = { version = "0.27", features = ["axum"] }
nanoid = "0.4"
parking_lot = "0.12"
png = "0.18"
pulldown-cmark = "0.13"
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
sublime-color-scheme = "0.1.5"
syntect = { version = "5", default-features = false, features = ["html", "regex-onig", "yaml-load", "dump-load", "dump-create"] }
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "build-syntaxes"
path = "src/bin/build_syntaxes.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
